--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
-        "vite": "^6.0.11"
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0"
     }
 }
